<resources>
    <string name="strAppName">View Group</string>
    <string name="strContent">
        Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4.
        We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US,
        where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.
    </string>
    <string name="strSumPhoto">6 Photos</string>
    <string name="strPrice">$713</string>
    <string name="strStock">Stock is only 5 pieces</string>

    <string name="strSpecDisplay_Lb">Display</string>
    <string name="strSpecSize_Lb">Size</string>
    <string name="strSpecBattery_Lb">Battery</string>
    <string name="strSeller_Lb">Sold By</string>

    <string name="strSpec">Specification</string>
    <string name="strSpecDisplay">
        5.0 inches\n
        FHD AMOLED at 441ppi\n
        2.5D Corning® Gorilla® Glass 4
    </string>
    <string name="strSpecSize">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="strSpecBattery">
        2,770 mAh battery\n
        Standby time (LTE) : up to 19 days\n
        Talk time (3g/WCDMA) : up to 26 hours\n
        Internet use time (Wi-Fi) : up to 13 hours\n
        Internet use time (LTE) : up to 13 hours\n
        Video playback : up to 13 hours\n
        Audio playback (via headset) : up to 110 hours\n
        Fast charging : up to 7 hours of use from only 15 minutes of charging
    </string>
    <string name="strSellerName">Fajar Wahyudianto</string>
    <string name="strBuy">Buy</string>
</resources>